# knowledge-pipeline

./: .dockerignore  .env.deploy.example  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
PLAN/: 2026-03-14_prefect-pipeline-setup.md
configs/: dagster.yaml  workspace.yaml
docker/code/: Dockerfile
docker/dagster/: Dockerfile
documents/: INDEXING.md  RETRIEVAL.md
scripts/: deploy-hcloud.sh
src/knowledge_pipeline/: __main__.py  chunking.py  config.py  definitions.py  store.py  strategies.yaml  vector_store.py
src/knowledge_pipeline/defs/backup/: ops.py
src/knowledge_pipeline/defs/backup_databases/: __init__.py  ops.py  resources.py
src/knowledge_pipeline/defs/evaluate/: README.md  __init__.py  assets.py  ops.py  queries.py  registry.py
src/knowledge_pipeline/defs/idx_markdown_bge/: __init__.py  assets.py  config.py  indexing.py  resources.py
src/knowledge_pipeline/defs/idx_markdown_minilm/: __init__.py  assets.py  chunking.py  embedding.py  indexing.py  raw_store.py  resources.py
src/knowledge_pipeline/defs/idx_recursive_minilm/: __init__.py
src/knowledge_pipeline/defs/index_contents/: __init__.py  assets.py  resources.py
src/knowledge_pipeline/defs/indexing/: assets.py  resources.py
src/knowledge_pipeline/defs/pipelines/: definitions.py
src/knowledge_pipeline/defs/pipelines/backup_databases/: __init__.py  resources.py
src/knowledge_pipeline/defs/pipelines/wiki/: __init__.py  assets.py  resources.py
src/knowledge_pipeline/defs/rag_0_baseline/: __init__.py  assets.py  chunking.py  config.py  embedding.py  indexing.py  raw_store.py  resources.py
src/knowledge_pipeline/defs/rag_1_bge/: __init__.py  assets.py  indexing.py  resources.py
src/knowledge_pipeline/defs/shared/: __init__.py  op_factories.py  raw_store.py  resources.py
src/knowledge_pipeline/defs/workbench/: definitions.py
src/knowledge_pipeline/defs/workbench/evaluate/: __init__.py  ops.py  queries.py  registry.py
src/knowledge_pipeline/defs/workbench/idx_markdown_minilm/: chunking.py  embedding.py
src/knowledge_pipeline/defs/workbench/idx_recursive_minilm/: assets.py
src/knowledge_pipeline/defs/workbench/idx_semantic_minilm/: __init__.py  assets.py
src/knowledge_pipeline/flows/: backup.py  index_knowledge.py
src/knowledge_pipeline/lib/: chunking.py  eval.py  llm.py  store.py  utils.py  vector_store.py
src/knowledge_pipeline/lib/chunking/: __init__.py  markdown.py  protocol.py  registry.py  types.py
src/knowledge_pipeline/lib/postprocess/: __init__.py  dedup.py  protocol.py  reorder.py
src/knowledge_pipeline/lib/retrieval/: __init__.py  cosine.py  fusion.py  hybrid.py  hyde.py  protocol.py  registry.py  rerank.py  types.py
src/knowledge_pipeline/lib/wiki/: aliases.py  ingest.py  io.py  prompts.py  sources.py  state.py  types.py
tests/: test_chunking.py  test_llm.py  test_store.py
tests/wiki/: test_aliases.py  test_ingest.py  test_io.py  test_sources.py  test_state.py  test_types.py
