[project]
name = "knowledge-pipeline"
version = "0.1.0"
description = "Dagster-based orchestrator for newsletter knowledge indexing and backup"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.9",
    "dagster-webserver>=1.9",
    "chromadb>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_pipeline"]

[tool.dagster]
module_name = "knowledge_pipeline.definitions"
code_location_name = "knowledge_pipeline"

[tool.poe.tasks]
dev = { cmd = "dagster dev", help = "Launch Dagster UI at localhost:3000" }
index = { cmd = "dagster job execute -m knowledge_pipeline.definitions -j index_knowledge_job", help = "Run index job once from CLI" }
backup = { cmd = "dagster job execute -m knowledge_pipeline.definitions -j backup_job", help = "Run backup job once from CLI" }
check = ["fmt", "lint"]
fmt = { cmd = "black src/" }
lint = { cmd = "ruff check src/" }
"fmt-fix" = { cmd = "black src/" }
"lint-fix" = { cmd = "ruff check --fix src/" }

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
