[project]
name = "knowledge-pipeline"
version = "0.1.0"
description = "Dagster-based orchestrator for newsletter knowledge indexing and backup"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.12,<2.0",
    "dagster-webserver>=1.12,<2.0",
    "chromadb>=1.5,<2.0",
    "poethepoet>=0.42,<1.0",
]

[dependency-groups]
dev = [
    "black>=24.0,<25.0",
    "ruff>=0.8,<1.0",
    "pytest>=8.0,<9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_pipeline"]

[tool.dagster]
module_name = "knowledge_pipeline.definitions"
code_location_name = "knowledge_pipeline"

# Poe the Poet (Scripting) #

## Dagster ##

[tool.poe.tasks.dev]
cmd = "dagster dev --port 3000"
help = "Launch Dagster UI at localhost:3000"

[tool.poe.tasks.index]
cmd = "dagster job execute -m knowledge_pipeline.definitions -j rag_0_baseline_job"
help = "Run index job once from CLI"

[tool.poe.tasks.backup]
cmd = "dagster job execute -m knowledge_pipeline.definitions -j backup_databases_job"
help = "Run backup job once from CLI"

## Code QA ##

[tool.poe.tasks.test]
cmd = "pytest -v"
help = "Run tests with verbose output"

[tool.poe.tasks.check]
sequence = ["fmt", "lint", "test"]
help = "Run all checks: formatting, linting, and tests"

[tool.poe.tasks.fmt]
cmd = "black --check src/"
help = "Check code formatting with black (does not modify)"

[tool.poe.tasks.fmt-fix]
cmd = "black src/"
help = "Fix code formatting issues automatically with black"

[tool.poe.tasks.lint]
cmd = "ruff check src/"
help = "Check code linting with ruff (does not modify)"

[tool.poe.tasks.lint-fix]
cmd = "ruff check --fix src/"
help = "Fix code linting issues automatically with ruff"

[tool.poe.tasks.fix]
sequence = ["fmt-fix", "lint-fix"]
help = "Fix all issues: formatting with black and linting with ruff"

[tool.pytest.ini_options]
testpaths = ["tests"]

## Dependency Configurations ##

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
